--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,12 @@ services:
       ["python", "-m", "app"]
 
   db:
-    image: postgres:14
+    image: postgres:16
     restart: always
     environment:
       - POSTGRES_PASSWORD=password
+    ports:
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
       interval: 1s
