--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "fast-api-sqlalchemy-template"
+name = "FastAPI-TasksApp"
 version = "0"
-description = "Async template on FastAPI and SQLAlchemy 2"
-authors = ["Artur Shiriev <me@shiriev.ru>"]
+description = ""
+authors = ["someone <some@one.one>"]
 license = "MIT License"
 
 
