А теперь оно ещё и в <s>мусроные</s> контейнеры влезает, что ещё нужно для счастья

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,14 @@ services:
     environment:
       - DEBUG=true
       - DB_ECHO=true
-    command:
-      ["python", "-m", "app"]
+
+  ui:
+    build: ./frontend
+    restart: always
+    volumes:
+      - .:/code
+    ports:
+      - "80:80"
 
   db:
     image: postgres:16
